force-app/main/default/objects/ssot__MailLetterEngagement__dlm/fields/ssot__rel_1719819805021_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819805021_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MailLetterEngagement_MailLetterId_ma_rel</label>
    <referenceTo>ssot__MailLetter__dlm</referenceTo>
    <relationshipLabel>MailLetterEngagement_MailLetterId_ma_rel</relationshipLabel>
    <relationshipName>rel_1719819805021_end</relationshipName>
    <type>Lookup</type>
</CustomField>