force-app/main/default/objects/ssot__MailLetterEngagement__dlm/fields/ssot__rel_1720024270960_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720024270960_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MailLetterEngagement_EngagementActio_rel</label>
    <referenceTo>ssot__EngagementAction__dlm</referenceTo>
    <relationshipLabel>MailLetterEngagement_EngagementActio_rel</relationshipLabel>
    <relationshipName>rel_1720024270960_end</relationshipName>
    <type>Lookup</type>
</CustomField>